# MCQGENERATOR

./: Response.json  StreamLitApp.py  data.txt  pyproject.toml  requirements.txt  setup.py  test.py
experiment/: mcq.ipynb
mcqgenrator.egg-info/: PKG-INFO  SOURCES.txt
src/mcqgenerator/: MCQGENERATOR.py  logger.py  utils.py
src/mcqgenerator.egg-info/: PKG-INFO  SOURCES.txt
